<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="finQuiz"
            type="aperr.android.grandquizscientifique.screens.FinQuiz" />

        <variable
            name="roomViewModel"
            type="aperr.android.grandquizscientifique.screens.RoomViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".screens.FinQuiz">


            <TextView
                android:id="@+id/joueur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/buxton_sketch"
                android:text="@{roomViewModel.username}"
                android:textColor="@color/orange2"
                android:textSize="40sp"
                android:visibility="@{(roomViewModel.username == null)?View.GONE:View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Lucia" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{finQuiz.txtScore(roomViewModel.score)}"
                android:textColor="@color/black"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/joueur"
                tools:text="Score: 7/20" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:visibility="@{roomViewModel.timerSetting?View.VISIBLE:View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/score"
                app:layout_constraintStart_toEndOf="@+id/score"
                app:layout_constraintTop_toTopOf="@+id/score"
                app:srcCompat="@drawable/baseline_timer_24" />

            <Button
                android:id="@+id/classement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/orange"
                android:text="@string/scores_ranking"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/score" />

            <Button
                android:id="@+id/Rejouer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/rejouer"
                app:layout_constraintEnd_toStartOf="@+id/Quitter"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/classement" />

            <Button
                android:id="@+id/Quitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/quitter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/Rejouer"
                app:layout_constraintTop_toBottomOf="@+id/classement" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>